# leaf

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  PERF.md  PLAN.md  README.md  deny.toml  docker-compose.yml  rustfmt.toml
.claude/: launch.json
.github/workflows/: ci.yml  docker-publish.yml
.sqlx/: query-06717d33f04499b46565ca20a6a472c6c526edf42cf420a6bd79c7807eb728a6.json  query-08d1800de99b7f01c67b1839b8a464cadc64c03595f47be2e3a0797b1a805f3a.json  query-13b9a925af95fb0ad7c699170b18f1d10fa0b0cc421a933a61ed0e914e0bbfcd.json  query-1d99aa86b4de0e2ad4f6e17daa9d1d7894a9db550cdda547b32b6b5ca480a5fd.json  query-25c0dabfede831b0c9ae273bcc9e756a79d0194ee8daabad7abb7e9101f56bca.json  query-261e9290142ed74e890103487140e1de893303917acc0f8ccf1d585a7639b8b0.json  query-3c1523f8bf515b2ca521993cd55ffea7a20e40056b894f65b72a8e0ec6a5808c.json  query-4949737ee6c370d798caad309fb95817624c80aaa8f86b849303206db2be4489.json  query-519600999c9a78bf9dc44b524c12815d4b369127a842ec93b36233b57dd4ba0f.json  query-57e00da84c8fa929b598bcd3fe831af12aa7842cca58a4f5d0ddfb4c73afedd8.json  query-590ed056635e9c0203d0f23a1b9fc56905b68789d74edad43af883ae753daf7b.json  query-5aac29257c12f9c8207e1faa4208e2b433d7f24d9392a39c7920a7ea71c0b489.json  query-618781b7095b28d5de480a712a6b763558a0a1043dbe13a993984e8c2e05405d.json  query-6882bd676bda4915c1c11665259bf67de372b182d592434d3126d93b227434ec.json  query-6c5da7240411663461b991c251b6c3d8d3f01563690b5ec8a389462576a1cd6d.json  query-7404199d612c271b4009260b7b485e4b716f968af66cf89f7a0b9accd746912e.json  query-7876c4234c22cc55fd783b1974f46c79770e596c272fe5db4595090f0f42670d.json  query-8551f7acb905d7a4d60345df1377eebefb6a937588033b904b0cc852d2ca7615.json  query-9d70150d6f76ebba5c65230cd3f3d4258ca5b11c66f1414d2e0567eeef1e3098.json  query-9e5998f2614518ae3111e4e0e1ec6b00ea1ff97fe376fcad31e6befcedf12e67.json  query-a49a9c7b2edda0eeb1018c7264b1b73e135708b5bbc7d1ca56ed3fbbdcef74ed.json  query-a5f9a56fa79d22f9a59a591c44c791e94e7e98fcf340b911d0d5dbd286adbaf1.json  query-a7d28d9bf0ef3b423610f2fc8536ff782929ed9ffb203bd7d12d5eadae0432ad.json  query-b0ee309eb18fab00ce03d36beac4a4ae703368a50e78bdc6f108207561e0f454.json  query-b5be30bd1c3c4bc5940b9f56f7b360f2442b632b329e7bcd83b98744dbb2f326.json  query-bf1a10df9e72d4675a0b708b821e8e877e83366c614aa8bc6ea9331c29728d30.json  query-c60dea734ba709d5e3f78deab26c06ec8490afad0e78a3f44fa40a6ebce96249.json  query-cf099d0c853b7329b058d0adaca4e2e9855b6c920338a7a1e35ffcc49ec2faba.json  query-dbcfbbed8c66b47c9271f8178435f3d815f27773ba1113cb9ff855211e837446.json
activity/: .env.example  README.md  eslint.config.js  index.html  mock.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
activity/scripts/: check-bundle-size.mjs
activity/src/: App.svelte  app.css  main.ts  vite-env.d.ts
activity/src/lib/: a11y.test.ts
activity/src/lib/admin/: client.test.ts  client.ts  schemas.ts
activity/src/lib/api/: client.test.ts  client.ts  schemas.ts
activity/src/lib/components/calendar/: Calendar.svelte  Calendar.test.ts  DayCell.svelte  MonthGrid.svelte
activity/src/lib/components/creator/: CreateWizard.svelte  CreateWizard.test.ts  MySeriesCard.svelte  SeriesSettingsForm.svelte  ViolationCallout.svelte
activity/src/lib/components/heatmap/: Heatmap.svelte  MonthBlock.svelte  MonthBlock.test.ts  ThumbTile.svelte
activity/src/lib/components/picker/: SeriesCard.svelte  SeriesPicker.svelte  SeriesPicker.test.ts
activity/src/lib/components/shared/: BlurImage.svelte  Callout.svelte  Skeleton.svelte
activity/src/lib/components/stats/: Stats.svelte  Stats.test.ts
activity/src/lib/components/ui/: Button.svelte  Card.svelte  IconButton.svelte  InfoTip.svelte  Spinner.svelte
activity/src/lib/components/viewer/: DayViewer.svelte  DayViewer.test.ts  ZoomableImage.svelte
activity/src/lib/sdk/: actions.ts  discord.ts  handshake.test.ts  handshake.ts  types.ts
activity/src/lib/stores/: gallery.svelte.ts  nav.svelte.ts  nav.test.ts  session.svelte.ts
activity/src/lib/test/: a11y.ts  io.ts
activity/src/lib/types/: api.ts
activity/src/lib/utils/: accent.test.ts  accent.ts  calendar.test.ts  calendar.ts  datetime.test.ts  datetime.ts  heatmap.test.ts  heatmap.ts  labels.ts  navigation.test.ts  navigation.ts  zoomClamp.test.ts  zoomClamp.ts
activity/src/mock/: MockHome.svelte  MockViewer.svelte  Screen.svelte  ScreenViewer.svelte  fixtures.ts  main.ts
activity/src/views/: Gallery.svelte  Home.svelte  Picker.svelte  Viewer.svelte
activity/src/views/admin/: Admin.svelte  GuildPanel.svelte
activity/src/views/creator/: CreateSeries.svelte  MySeries.svelte  SeriesSettings.svelte  entry.ts
crates/leaf/: Cargo.toml
crates/leaf-bot/: Cargo.toml
crates/leaf-bot/src/: checks.rs  commands.rs  error.rs  events.rs  lib.rs  reminders.rs
crates/leaf-bot/src/commands/: archive.rs  mod.rs  query.rs  series.rs  series_lookup.rs  settings.rs  setup.rs  transfer.rs  wrapped.rs
crates/leaf-core/: Cargo.toml
crates/leaf-core/src/: config.rs  db.rs  domain.rs  lib.rs  media.rs  milestone.rs  parser.rs  policy.rs  reminder.rs  series_ops.rs  stats.rs  transfer.rs  wrapped.rs
crates/leaf-core/src/db/: guilds.rs  posts.rs  series.rs
crates/leaf-migrate/: Cargo.toml
crates/leaf-migrate/src/: discord.rs  importer.rs  main.rs  mapping.rs  source.rs
crates/leaf-server/: Cargo.toml
crates/leaf-server/src/: lib.rs  run.rs  setup.rs  setup_page.html  validate.rs
crates/leaf-server/src/api/: admin.rs  auth.rs  discord.rs  dto.rs  error.rs  media.rs  mod.rs  state.rs
crates/leaf/src/: main.rs
docs/: README.md  phases.md  rust-guidelines.md  svelte-guidelines.md
guide/: 01-install.md  02-discord.md  03-cloudflare.md  04-usage.md  05-migration.md  06-local-dev.md  07-troubleshooting.md  README.md
migrations/: 0001_init.sql  0002_reminder_state.sql
