[package]
name = "leaf-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "leaf Discord bot: gateway events, commands, capture flows"

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
