[package]
name = "leaf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "leaf domain logic: series, posts, repositories, config, media"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sqlx.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
