[package]
name = "leaf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "leaf domain logic: series, posts, repositories, config, media"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1"
toml.workspace = true
sqlx.workspace = true
chrono.workspace = true
rand.workspace = true
object_store.workspace = true
bytes.workspace = true
reqwest.workspace = true
image.workspace = true
kamadak-exif.workspace = true
regex-lite.workspace = true
tempfile.workspace = true

[lints]
workspace = true
