[package]
name = "leaf-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "one-shot CLI migrating a walpurgisbot-v2 archive into leaf"

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
