[package]
name = "leaf-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "one-shot CLI migrating a walpurgisbot-v2 archive into leaf"

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true

[dev-dependencies]
object_store.workspace = true
tempfile.workspace = true
image.workspace = true

[lints]
workspace = true
