[package]
name = "leaf-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "leaf HTTP server: bootstrap setup UI, REST API, media proxy, embedded app hosting"

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
object_store.workspace = true
bytes.workspace = true
rand.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tempfile.workspace = true

[lints]
workspace = true
